# clawmem

./: .gitignore  Cargo.toml  README.md  SPEC.md
src/: compact.rs  db.rs  embed.rs  lib.rs  main.rs  mcp.rs  search.rs  types.rs
tests/: integration.rs
